2004-11-24  Andrew Lindeman <alindeman@users.sf.net>    1.5-cvs-b280

	* Fix: Don't quote literal variables

2004-11-23  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b279

	* Fix: Added stats/-wizard to safeToInclude List

	* Fix: Radiogroup in stats-wizard

	* Change: Layout Tweak of stats/-wizard, especially when embedded.

	* Change: tweaked function for validation to use referer when no file was given.

	* Fix: Added correct header and footer to stats-wizard and made is valid html 4.01
	  ToDo: make stats valid HTML	

	Thanks to Kai Tomalik.

2004-11-22  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b278

	* New: Added stats.php by Jeremy Gilliat.
	  - Added stats-wizard.
	  - Modified stats.php to fit with Gallery 1.5
	  - Added new Tab in Step 2 of config for caching settings.
	    (Config Version increased)

	* New: Added Parameter: $newestFirst for ordering.

	* Change: Added check must-be-integer and modified must-be-number in confirm.inc
	
2004-11-22  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b277

	* Fix: publish_xp issues with register_globals, and debug error display

2004-11-19  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b276

	* Fix 1069232: Big applet didn't work embedded

2004-11-19  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b275

	* Fix: Regex in despam comments were broken.

	* Change: Tweaked Layout of despam comments.

2004-11-19  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b274

	* Fix: Try and detect a corrupt albumdb.dat and rebuild without
	  displaying numerous errors to the user

2004-11-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b273

	* Change: Allow session-sharing in devMode so that pages 
	  can be validated using the W3 validation links

2004-11-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b272

	* Change: Never put case statements after default ... dur.  My bad.

2004-11-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b271

	* Add:  New print affiliate "Fotoserve"
