@@ -1,3 +1,7 @@
+2004-11-27  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b281
+
+	* Change: Added admin-page.php to save space on first space.
+
 2004-11-24  Andrew Lindeman <alindeman@users.sf.net>    1.5-cvs-b280
 
 	* Fix: Don't quote literal variables
